# pantheon-sdk-agents

./: .bumpversion.toml  .gitignore  Dockerfile  README.md  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: agents.base-agent.yml  release.pantheon-sdk-agents.yml  release.python-agent.yml  reusable.publish-docker.yml  reusable.publish-python.yml  tests.pantheon-sdk-agents.yml  tests.relay-service.yml
agents/base-agent/: .bumpversion.toml  Dockerfile  entrypoint.py  pyproject.toml
agents/base-agent/src/base_agent/: abc.py  bootstrap.py  const.py  models.py  ray_entrypoint.py  utils.py
base-agent/: .env.example  Dockerfile  docker-compose.override.yaml  repomix-output.xml
base-agent/src/base_agent/: p2p.py
base-agent/src/base_agent/p2p_isolated/: __init__.py
base-agent/tests/: test_imports.py
base-agent/tests/e2e/: mock_relay_node.py  test_libp2p_integration.py
docs/: CONTRIBUTING.md
pantheon_sdk/agents/: abc.py  bootstrap.py  models.py  ray_entrypoint.py  utils.py
pantheon_sdk/agents/ai_registry/: __init__.py  client.py
pantheon_sdk/agents/card/: __init__.py  builder.py  config.py  models.py
pantheon_sdk/agents/domain_knowledge/: __init__.py  client.py
pantheon_sdk/agents/langchain/: __init__.py  config.py  executor.py
pantheon_sdk/agents/memory/: __init__.py  client.py
pantheon_sdk/agents/orchestration/: __init__.py  config.py  runner.py  utils.py
pantheon_sdk/agents/p2p/: __init__.py  handlers.py  manager.py
pantheon_sdk/agents/prompt/: __init__.py  builder.py  config.py  parser.py
pantheon_sdk/agents/workflows/: runner.py
relay-service/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  start.sh
relay-service/src/relay_service/: app.py  config.py
relay-service/src/relay_service/models/: peers.py
relay-service/src/relay_service/svc/: redis.py  relay.py
relay-service/src/relay_service/web/views/: health.py  peers.py
relay-service/tests/: conftest.py  test_health.py  test_peers.py
src/base-agent/: LICENSE
src/base_agent/: models.py  p2p.py
src/base_agent/p2p/: manager.py
tests/: test_sdk.py
tests/p2p/: conftest.py
tests/p2p/libp2p/: test_p2pnode.py  test_p2putils.py
(+8 files in other folders)
