[project]
name = "relay_service"
version = "0.0.1"
description = "Relay Service"
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.9,<4.0"

dependencies = [
    "aiohappyeyeballs==2.4.6",
    "aiohttp==3.11.12",
    "aiokafka==0.12.0",
    "aiosignal==1.3.2",
    "alembic==1.14.1",
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "async-timeout (>=4.0.0,<5.0.0)",
    "asyncpg==0.30.0",
    "attrs==25.1.0",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "distro==1.9.0",
    "fastapi==0.115.8",
    "filelock==3.17.0",
    "frozenlist==1.5.0",
    "greenlet==3.1.1",
    "h11==0.14.0",
    "h2==4.2.0",
    "hpack==4.1.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "hyperframe==6.1.0",
    "idna==3.10",
    "iniconfig==2.0.0",
    "jiter==0.8.2",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "loguru==0.7.3",
    "Mako==1.3.9",
    "MarkupSafe==3.0.2",
    "msgpack==1.1.0",
    "multidict==6.1.0",
    "openai==1.63.2",
    "orjson==3.10.15",
    "packaging==24.2",
    "pluggy==1.5.0",
    "portalocker==2.10.1",
    "propcache==0.2.1",
    "pydantic==2.10.6",
    "pydantic-settings==2.7.1",
    "pydantic_core==2.27.2",
    "python-dotenv==1.0.1",
    "referencing==0.36.2",
    "redis==5.2.1",
    "regex==2024.11.6",
    "requests==2.32.3",
    "requests-toolbelt==1.0.0",
    "rpds-py==0.22.3",
    "setuptools==75.8.0",
    "sniffio==1.3.1",
    "SQLAlchemy==2.0.38",
    "sqlalchemy-mixins==2.0.5",
    "sqlmodel==0.0.22",
    "starlette==0.45.3",
    "tenacity==9.0.0",
    "tqdm==4.67.1",
    "typing_extensions==4.12.2",
    "uvicorn==0.34.0",
    "wheel==0.45.1",
    "yarl==1.18.3",
    "zstandard==0.23.0",
]

[tool.poetry.dependencies]


[tool.poetry]
packages = [{ include = "*", from = "src" }]

[tool.poetry.group.dev.dependencies]
mypy = "1.15.0"
mypy-extensions = "1.0.0"
pytest = "8.3.4"
pytest-asyncio = "0.16.0"
ruff = "0.9.6"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

